# HwTracker

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  main.yml
forms/: mainwindow.ui
include/: draggablelabel.h  includes.h  mainwindow.h
src/: app.rc  draggablelabel.cpp  main.cpp  mainwindow.cpp
